FINALLY fixed the stupid hyperlink spacing problem
removed the accidental download folder

--- a/custommodule.css
+++ b/custommodule.css
@@ -4,10 +4,10 @@
   }
 
   #resource a{
-    margin:30px 20px;
-    display:inline-block;
+    word-wrap: break-word;
     text-decoration:none;
-    color:#fff;
+    text-decoration: underline;
+    color:#0d6efd;
   }
 
 /* Style the button that is used to open and close the collapsible content */
@@ -62,3 +62,9 @@
       text-decoration: underline;
       color:#0d6efd;
   }
+
+/*trying to fix the multiply white backgrounds when cards are expended*/
+  .bg-light {
+    --bs-bg-opacity: 0;
+    background-color: #fff;
+}
